--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongoosastic": "^5.0.0",
     "mongoose": "^6.7.2",
     "multer": "^1.4.5-lts.1",
     "yjs": "^13.5.42"
