--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mongoosastic": "^5.0.0",
     "mongoose": "^6.7.2",
     "multer": "^1.4.5-lts.1",
+    "tslib": "^2.4.1",
     "yjs": "^13.5.42"
   },
   "devDependencies": {
