--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
+    "cluster-shared-memory": "^1.1.5",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
