fix for prod stuff

--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.5.0",
     "@fastify/cookie": "^8.3.0",
+    "@fastify/cors": "^7.0.0",
     "@fastify/express": "^2.2.0",
+    "@fastify/formbody": "^7.3.0",
     "@fastify/multipart": "^7.3.0",
     "@fastify/session": "^10.1.0",
     "@fastify/static": "^6.5.1",
@@ -25,7 +27,9 @@
     "dotenv": "^16.0.3",
     "express-session": "^1.17.3",
     "fastify": "^4.10.2",
+    "fastify-cors": "^6.1.0",
     "fastify-multer": "^2.0.3",
+    "fastify-socket.io": "^4.0.0",
     "fastify-sse": "^1.0.0",
     "fastify-sse-v2": "^3.0.0",
     "mongoose": "^6.7.5",
